--- a/README
+++ b/README
@@ -1,2 +1,6 @@
 A database for storing and comparing locations of many short-reads aligned to the genome and 
 genomic locations using GIS functions for indexes.
+
+Jason Stajich
+University of Caliornia, Berkeley
+jason[at]open-bio.org
